# real-world-forums

./: App.toml  Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/migrations/: 20240222164342_create_users_table.up.sql
server/src/: config.rs  context.rs  main.rs  models.rs
server/src/handlers/: mod.rs
server/src/http/: context.rs  error.rs  mod.rs  token_manager.rs
server/src/http/endpoints/: auth.rs  mod.rs  users.rs
server/src/http/extractors/: auth.rs  json.rs  mod.rs
