[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["macros"] }
config = "0.14.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono"] }
chrono = { version = "0.4.34", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5.2", features = ["trace"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.21.7"
